--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,142 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
   <head>
+    
+    <script src="jdate.js" type="text/javascript" charset="utf-8"></script>
+    <script src="jdate.min.js" type="text/javascript" charset="utf-8"></script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
+    <style>
+      #root .loader-container {
+        background-color: #000000;
+        background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
+        height: 100vh !important;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .wait {
+        font-family: "Iranian_Sans" !important;
+        padding-bottom: 2vh;
+        padding-right: 2vh;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: #ffffff;
+      }
+      .sk-chase {
+        width: 40px;
+        height: 40px;
+        position: relative;
+        animation: sk-chase 2.5s infinite linear both;
+      }
+
+      .sk-chase-dot {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        animation: sk-chase-dot 2s infinite ease-in-out both;
+      }
+
+      .sk-chase-dot:before {
+        content: "";
+        display: block;
+        width: 25%;
+        height: 25%;
+        background-color: #fff;
+        border-radius: 100%;
+        animation: sk-chase-dot-before 2s infinite ease-in-out both;
+      }
+
+      .sk-chase-dot:nth-child(1) {
+        animation-delay: -1.1s;
+      }
+      .sk-chase-dot:nth-child(2) {
+        animation-delay: -1s;
+      }
+      .sk-chase-dot:nth-child(3) {
+        animation-delay: -0.9s;
+      }
+      .sk-chase-dot:nth-child(4) {
+        animation-delay: -0.8s;
+      }
+      .sk-chase-dot:nth-child(5) {
+        animation-delay: -0.7s;
+      }
+      .sk-chase-dot:nth-child(6) {
+        animation-delay: -0.6s;
+      }
+      .sk-chase-dot:nth-child(1):before {
+        animation-delay: -1.1s;
+      }
+      .sk-chase-dot:nth-child(2):before {
+        animation-delay: -1s;
+      }
+      .sk-chase-dot:nth-child(3):before {
+        animation-delay: -0.9s;
+      }
+      .sk-chase-dot:nth-child(4):before {
+        animation-delay: -0.8s;
+      }
+      .sk-chase-dot:nth-child(5):before {
+        animation-delay: -0.7s;
+      }
+      .sk-chase-dot:nth-child(6):before {
+        animation-delay: -0.6s;
+      }
+
+      @keyframes sk-chase {
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes sk-chase-dot {
+        80%,
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes sk-chase-dot-before {
+        50% {
+          transform: scale(0.4);
+        }
+        100%,
+        0% {
+          transform: scale(1);
+        }
+      }
+    </style>
   </head>
-  <body>
+
+  <body style="margin: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root">
+      <div class="loader-container">
+        <h3 class="wait">درحال برقراری ارتباط</h3>
+        <div class="loader">
+          <div class="sk-chase">
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+            <div class="sk-chase-dot"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
